GDS-574 - more card fixes - Cleaned up html for grid elements - added padding all around for the grid column instead of just left and right - updated card styles, removed top margin as we get this from the grid now - updated card styles, added extra padding to accomodate icon - updated card styles, removed link color for title

--- a/src/global/scss/style/_grid.scss
+++ b/src/global/scss/style/_grid.scss
@@ -15,8 +15,7 @@
   align-items: stretch;
 
   > .nsw-col {
-    padding-left: rem($grid-gutters);
-    padding-right: rem($grid-gutters);
+    padding: rem($grid-gutters);
   }
 
   &--no-gutters {
